# vllm-ascend

./: .gitignore  AGENTS.md  Cargo.toml  README.md  WORKFLOW.md  WORKSPEC.md
.github/workflows/: ci.yml  release.yml
crates/arch/: Cargo.toml
crates/arch/src/: cuda.rs  lib.rs  lowering.rs  npu.rs
crates/backend/: Cargo.toml
crates/backend/src/: extract.rs  lib.rs  spec.rs
crates/backend/src/cann/: emit.rs  mod.rs
crates/backend/src/cuda/: emit.rs  kernels.rs  mod.rs
crates/backend/src/metal/: emit.rs  (+1 more)
crates/base/: Cargo.toml
crates/base/src/: lib.rs  raw.rs  storage.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/frontend/: Cargo.toml
crates/frontend/src/: dsl.rs  lib.rs  onnx.rs  proto.rs  pt.rs
crates/interface/: Cargo.toml
crates/interface/src/: lib.rs
crates/isel/: Cargo.toml
crates/isel/src/: lib.rs
crates/lisp/: Cargo.toml
crates/lisp/src/: interp.rs  lib.rs  parser.rs
crates/optimizer/: Cargo.toml
crates/optimizer/src/: algebra.rs  constprop.rs  cost_model.rs  cse.rs  decompose.rs  float_opts.rs  fuse.rs  lib.rs  passes.rs  shape_infer.rs
crates/regalloc/: Cargo.toml
crates/regalloc/src/: allocator.rs  coalescing.rs  coloring.rs  interference.rs  lib.rs  liveness.rs  types.rs
src/: lib.rs
src/graph/: ir.rs  mod.rs  raw.rs
src/ir/: dialect.rs  mod.rs  op.rs  ty.rs
src/pass/: analyses.rs  compiler.rs  diagnostics.rs  group.rs  manager.rs  mod.rs  mod_final.rs  pass.rs  pipeline.rs
src/pass/transforms/: canonicalize.rs  cse.rs  dce.rs  mod.rs
(+2 files in other folders)
