[package]
name = "interface"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
authors.workspace = true

[dependencies]
base = { workspace = true }
common = { workspace = true }
frontend = { workspace = true }
optimizer = { workspace = true }
arch = { workspace = true }
isel = { workspace = true }
regalloc = { path = "../regalloc" }
